# core-engine

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: docker-deploy.yml  tox.yml
.tools-cfg/: black-cfg.toml
alembic/: env.py
alembic/versions/: 16460fcc4cb5_project_description.py  205170643f11_rename_feature_name.py  3b3f85c67840_datasource_stage_paths.py  403744476b7c_on_delete_to_null.py  7e4d201112ea_datasource_stage_paths.py  9af3bbcb820c_fix_feature_engineering_relation.py  9c65d80b85d5_deployment_table.py  bcfadc7bd581_rename_formula_to_operation.py  d3b862a8b24f_db_init.py
engine/: __init__.py  dependencies.py  main.py  schemas.py  types.py
engine/cleaning/: cleaning_functions.py  models.py  router.py  schemas.py
engine/db/: base.py  database.py
engine/deployment/: models.py  router.py
engine/feature_engineering/: fe.py  models.py  router.py  schema.py
engine/model_selection/: models.py  router.py  schemas.py
engine/projects/: models.py  router.py  schemas.py
engine/users/: models.py  router.py  schemas.py  util.py
upload/data/ready/: test.csv
